--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <a href="https://github.com" target="_blank"class="socialname">GitHub</a> | 
             <a href="https://instagram.com" target="_blank"class="socialname">Instagram</a> | 
             <a href="https://facebook.com" target="_blank"class="socialname">Facebook</a><br></p><p class="socialmedialogo"><div class="socialmedialogo">
-            connect with me:<br>
+            connect with me:thisarunuwan42@gmail.com<br>
             <a href="https://twitter.com" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYHDhjypgRklncOY5oZJLLQ3TysrcwWN4gfg&s" alt="twitter logo contact" class="twitterimage"></a>
             <a href="https://linkedin.com" target="_blank"><img src="https://thumbs.dreamstime.com/b/linkden-154683363.jpg" alt="linkedin logo" class="twitterimage"></a>
             <a href="https://github.com" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTevzZpuIEQxaOMTporsNlPsY5ISwdo7m6LVA&s" alt="github logo" class="twitterimage"></a>
