--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title><!--this shows in name of the tab-->
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/540/203/png-transparent-iron-man-illustration-thor-marvel-comics-iron-man-superhero-marvel-universe-ironman-comics-heroes-black-widow-thumbnail.png">
 </head>
 <body>
     <header>
